syntax = "proto3";

package bst.v1;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/yourusername/bst-pj-proto/gen/go/bst/v1;bstv1";

message Comment {
  int32                     id         = 1;
  string                    content    = 2;
  int32                     user_id    = 3;
  int32                     thread_id  = 4;
  google.protobuf.Timestamp created_at = 5;
  repeated Mention          mentions   = 6;
}

message Thread {
  int32                     id          = 1;
  string                    title       = 2;
  string                    description = 3;
  repeated Comment          comments    = 4;
  User                      createdBy   = 5;
  google.protobuf.Timestamp createdAt   = 6;
  google.protobuf.Timestamp updatedAt   = 7;
}

message Mention {
  enum MentionType {
    MENTION_TYPE_UNSPECIFIED              = 0;
    MENTION_TYPE_USER                     = 1;
    MENTION_TYPE_ALL_SESSION_PARTICIPANTS = 2;
    MENTION_TYPE_ALL_THREAD_PARTICIPANTS  = 3;
  }
  MentionType type = 1;

  // Only for MENTION_TYPE_USER
  User user = 2;

  // Only for MENTION_TYPE_ALL_SESSION_PARTICIPANTS
  int32 sessionId = 3;

  // Only for MENTION_TYPE_ALL_THREAD_PARTICIPANTS
  int32 threadId = 4;
}

message ReactionType {
  int32  id          = 1;
  string name        = 2;
  string description = 3;
  string iconUrl     = 4;
}

message Reaction {
  int32                     id             = 1;
  User                      user           = 2;
  int32                     reactionTypeId = 3;
  google.protobuf.Timestamp createdAt      = 4;
}
